--- a/omdbMovieApp/style.css
+++ b/omdbMovieApp/style.css
@@ -22,7 +22,7 @@ body{
     margin-top: 40px;
     /* border: 1px solid red; */
 }
-form > button{
+button{
     height: 35px;
     width: 100px;
     margin-left: -5px;
@@ -31,30 +31,22 @@ form > button{
     border: 0px;
     border-radius: 5px;
 }
-form > input{
-    height: 30px;
-    width: 400px;
-    margin-bottom: 20px;
-}
-
 #display{
     width: 80%;
     height: 400px;
-    border: 1px solid green;
+    /* border: 1px solid green; */
     margin-top: 50px;
     display: flex;
     justify-content: center;
     margin-left: 150px;
     margin-right: 50px;
 }
-#img{
-    border: 1px solid blue;
-}
 #img> img{
     height: 400px;
+    border: 10px solid brown;
 }
 #info{
-    border: 1px solid red;
+    /* border: 1px solid red; */
     margin-left: 20px;
     width: 50%;
     height: 400px;
@@ -72,7 +64,7 @@ form > input{
     font-size: medium;
 }
 #info :nth-child(3){
-    border: 1px solid red;
+    /* border: 1px solid red; */
     margin-right: 10px;
     height: auto;
 }
